src/objects/TempConfigItem__c.object
<CustomObject>
    <fields>
        <fullName>ConfigItem_Product_Configuration__c</fullName>
        <label>Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipLabel>Temp Config Items</relationshipLabel>
        <relationshipName>Temp_Config_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EPT_Site_Quantity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPT Site Quantity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPT_Sites__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPT Sites</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProductID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spare</label>
        <type>Checkbox</type>
    </fields>
    <label>Temp Config Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>TempConfigItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Config Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>